# cspot

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
main/: CMakeLists.txt
main/include/: ConnectDeviceState copy.h  ConnectDeviceState.h  ConnectStateHandler.h  Constants.h  ContextTrackResolver.h  LoginBlob.h  NanoPBExtensions.h  Session.h  SessionContext.h  TrackProvider.h  TrackQueue.h  Utils.h
main/include/api/: ApConnection.h  CredentialsResolver.h  DealerClient.h  SpClient.h
main/include/bell/: Logger.h  Result.h
main/include/bell/http/: Reader.h
main/include/bell/io/: BinaryStream.h  MemoryStream.h
main/include/bell/net/: TCPSocket.h
main/include/bell/utils/: DigestCrypto.h  Semaphore.h  Task.h
main/include/crypto/: Base62.h  DiffieHellman.h  Shannon.h
main/include/events/: EventLoop.h  EventModels.h
main/include/proto/: ConnectPb.h  MetadataPb.h  NanoPBHelper.h  SpotifyId.h
main/src/: ConnectDeviceState.cpp  ConnectStateHandler.cpp  ContextTrackResolver.cpp  CredentialsResolver.cpp  LoginBlob.cpp  NanoPBExtensions.cpp  Session.cpp  TrackProvider.cpp  TrackQueue.cpp
main/src/api/: ApConnection.cpp  DealerClient.cpp  SpClient.cpp
main/src/bell/http/: Client.cpp
main/src/crypto/: Base62.cpp  DiffieHellman.cpp  Shannon.cpp
main/src/events/: EventLoop.cpp
main/src/proto/: MetadataPb.cpp  NanoPBHelper.cpp  SpotifyId.cpp
protobuf/: authentication.options  clienttoken.proto  connect.proto  connectivity.proto  login5.proto  metadata.proto
targets/esp32/main/: BellHTTPServer.h  BellTask.h  BellUtils.h  CMakeLists.txt  ESPStatusLed.cpp  ESPStatusLed.h  MDNSService.h  main.cpp
test/: ApResolveTest.cpp  CMakeLists.txt  main.cpp
